2005-09-23  Don Porter  <dgp@users.sourceforge.net>

	[kennykb-numerics-branch]

	* generic/tclStrToD.c:	Fixed memory leak.  [Bug 1299803].
	* generic/tclObj.c:	

2005-09-20  Don Porter  <dgp@users.sourceforge.net>

	[kennykb-numerics-branch]
	
	* generic/tclExecute.c:	Revise TclIncrObj() to call
	Tcl_GetBignumAndClearObj.

	* generic/tcl.decls:	Add Tcl_GetBignumAndClearObj.
	* generic/tclObj.c:

	* generic/tclDecls.h:	make genstubs
	* generic/tclStubInit.c:

2005-09-16  Don Porter  <dgp@users.sourceforge.net>

	[kennykb-numerics-branch]

	* generic/tclInt.h:		Added TclBNInitBigNumFromWideInt()
	* generic/tclTomMathInterface.c:	so that every caller isn't
	required to duplicate the sign logic to use the unsigned interface.

	* generic/tclBasic.c:	Reduce the number of places where Tcl
	* generic/tclExecute.c:	intrudes into the internal format details
	* generic/tclObj.c:	of the mp_int struct.
	* generic/tclStrToD.c:
	* generic/tcLStringObj.c:

	* generic/tclTomMath.h:	Added mp_cmp_d to routines from
	* unix/Makefile.in:	libtommath used by Tcl.
	* win/Makefile.in:
	* win/makefile.vc:

	* libtommath/bn_mp_add_d.c:	Bug fix.  For mp_add_d(&a, d, &c),
	when &a has the value -d, then the value &c computed should be zero,
	but mp_add_d was producing an inconsistent zero value with a sign
	field of MP_NEG, something like a value of -0, which other routines
	in libtommath can't handle.

	* generic/tclExecute.c:	Dropped all creation of "bigOne" values
	and just use tommath routines that accept the value "1" directly.

2005-09-15  Don Porter  <dgp@users.sourceforge.net>

	[kennykb-numerics-branch]	Merge updates from HEAD.

	* generic/tclStringObj.c (TclAppendFormattedObjs):	Revision
	to eliminate one round of string copying.

	* generic/tclBasic.c:	More callers of TclObjPrintf and
	* generic/tclCkalloc.c:	TclFormatToErrorInfo.
	* generic/tclCmdMZ.c:
	* generic/tclExecute.c:
	* generic/tclIORChan.c:
	* generic/tclMain.c:
	* generic/tclProc.c:
	* generic/tclTimer.c: